feat: added borrowed books to user info
